# weilens

./: .prettierrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  components.json  eslint.config.js  package.json  vite.config.ts
.zed/: debug.json  tasks.json
src/: App.tsx  app.tsx  index.css  main.tsx  router.ts  storage-keys.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dates.rs  db.rs  download.rs  exif.rs  image.rs  lib.rs  main.rs  motion.rs  server.rs  types.rs  util.rs
src/components/: AppShell.tsx  BlogCard.tsx  BlogFeed.tsx  CookieSetupDialog.tsx  DownloadProgressPanel.tsx  HistoryPanel.tsx  ImageViewer.tsx  LocationDialog.tsx  SearchForm.tsx  SettingsModal.tsx  SettingsPanel.tsx  app-shell.tsx  download-progress-panel.tsx  external-link-guard.tsx  history-panel.tsx  search-form.tsx  theme-provider.tsx
src/feed/: blog-card-download-actions.tsx  blog-card-header.tsx  blog-card-images.tsx  blog-card-location.tsx  blog-card.tsx  blog-feed.tsx  coordinate-prompt.tsx  image-viewer.tsx  location-dialog.tsx  saved-places.tsx
src/hooks/: use-mobile.ts  use-profile-lookup.ts  use-wei-Lookup.ts  useWeiLookup.ts
src/lib/: api.ts  proxy.ts  query-client.ts  remote.ts  wei-tricks.ts
src/onboarding/: onboarding-state.ts  onboarding.tsx
src/routes/: __root.tsx  index.tsx  settings.tsx
src/settings/: cookie-setup-dialog.tsx  settings-modal.tsx  settings-panel.tsx
src/shared/: WeiSchema.ts  api.ts  gps.ts  rpc.ts  storageKeys.ts
src/stores/: appStore.ts  useAuthStore.ts  useDownloadsStore.ts  useHistoryStore.ts  usePlacesStore.ts  useProfileStore.ts  useSettingsStore.ts  useUiStore.ts
src/types/: gps.ts  remote.ts  rpc.ts  wei.ts
(+14 files in other folders)
