[package]
name = "weilens"
version = "0.1.5"
description = "Sina Weibo viewer and downloader"
authors = ["nullxception"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weilens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking", "http2"] }
image = "0.25"
chrono = "0.4"
little_exif = "0.6"
rfd = "0.15"
dirs = "6.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2"
thiserror = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-os = "2"
rand = "0.9"
img-parts = "0.4.0"
xmp-writer = "0.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Speed
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
